test/asm/export.err
error: export.asm(18):
    syntax error, unexpected EQUS
error: Assembly aborted (1 error)!
